# bas-calculus

./: .stylish-haskell.yaml  README.md  basc.cabal  g4ip.cabal  hseq.cabal  stab.cabal  stack.yaml  super.cabal  superintuition.cabal
.devcontainer/: devcontainer.json
.github/workflows/: haskell.yml
app/: Main.hs
bench/: intuitGödData.csv  intuitGödReport.csv  intuitIL_data.csv  intuitIntData.csv  intuitIntReport.csv  intuitJN_data.csv  intuitJN_report.csv  intuitJanData.csv  superGödData.csv  superIL_report.csv  superIntData.csv  superJanData.csv  superJanReport.csv  superLC_report.csv
src/: Bounding.hs  Embed.hs  Formula.hs  MultiSet.hs  Multiset.hs  Parser.hs  Prover.hs  Sequent.hs  State.hs  Utils.hs
src/Data/: Collection.hs  Formula.hs  Sequent.hs
src/Prover/: Classic.hs  G3cp.hs  G4ip.hs  G4ipm.hs  G4sp.hs  Intuition.hs  MG4ip.hs  M_G4ip.hs  Super.hs  Utils.hs
src/Utils/: Formula.hs
test/: Main.hs  Spec.hs
test/cases/: BAS1.p  BAS2.p  BAS3.p  HIL1A.p  HIL2A.p  HIL2B.p  HIL2C.p  HIL2D.p  HIL2E.p  HIL3A.p  HIL3B.p  HIL3C.p  HIL4A.p  HIL4B.p  HIL4C.p  HIL5A.p  HIL5B.p  HIL6C.p  HIL7A.p  HIL7B.p  HIL8A.p  PRI285.p  PTA108.p  PTA113.p
test/examples/: PRI215.p
test/problems/AXI/: AXI1A.p  AXI1B.p  AXI1C.p  AXI1D.p  AXI1E.p  AXI1F.p  AXI2A.p  AXI2B.p  AXI2C.p  AXI2D.p  AXI2E.p  AXI2F.p
test/problems/SYJ/: SYJ206+1.004.p  SYJ208+1.018.p  SYJ208+1.019.p  SYJ208+1.020.p
