cabal-version:      2.4
name:               basc
version:            0.1.0.0
synopsis:           Bounded-analytic sequent calculus
homepage:           https://github.com/bhaaksema/basc
bug-reports:        https://github.com/bhaaksema/basc/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             bhaaksema
maintainer:         17254355+bhaaksema@users.noreply.github.com
category:           Logic
extra-doc-files:    README.md
-- extra-source-files:

common shared-props
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.0
    default-language: Haskell2010

library
    import:           shared-props
    exposed-modules:  Formula

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   src

executable basc
    import:           shared-props
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    basc
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite basc-test
    import:           shared-props
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
