cabal-version:      2.4
name:               g4ip
version:            0.1.0.0
synopsis:           Bounded-analytic sequent calculus
homepage:           https://github.com/bhaaksema/g4ip-haskell
bug-reports:        https://github.com/bhaaksema/g4ip-haskell/issues
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             bhaaksema
maintainer:         17254355+bhaaksema@users.noreply.github.com
category:           Logic
extra-doc-files:    README.md

common shared-props
    ghc-options:      -Wall
    build-depends:    base ^>=4.17.2.0, containers ^>=0.6.7
    default-language: Haskell2010

library
    import:           shared-props
    exposed-modules:  Formula, Prover
    other-modules:    Bounding, Multiset
    hs-source-dirs:   src

executable g4ip
    import:           shared-props
    main-is:          Main.hs
    build-depends:    g4ip
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite g4ip-test
    import:           shared-props
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:    g4ip
