cabal-version:   2.4
name:            stab
version:         0.3.4.2
synopsis:        Haskell Tableaux-based Prover for Superintuitionistic Logics
homepage:        https://github.com/bhaaksema/stab-prover
bug-reports:     https://github.com/bhaaksema/stab-prover/issues
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          bhaaksema
maintainer:      17254355+bhaaksema@users.noreply.github.com
category:        Logic
extra-doc-files: README.md

common shared-props
  ghc-options:      -Wall
  build-depends:
    base ^>=4.17.2.1,
    containers ^>=0.6.7,
    megaparsec ^>=9.3.1,
    text ^>=2.0.2,
    parser-combinators ^>=1.3.0
  default-language: Haskell2010

executable stab
  import:           shared-props
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    stab

library
  import:           shared-props
  exposed-modules:  Formula, Parser, Prover
  other-modules:    Embed, Sequent
  hs-source-dirs:   src

test-suite stab-test
  import:           shared-props
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:    stab
