cabal-version:   2.2
name:            super
version:         0.3.5.1
synopsis:        Haskell Tableaux-based Prover for Superintuitionistic Logics
homepage:        https://github.com/bhaaksema/super-prover
bug-reports:     https://github.com/bhaaksema/super-prover/issues
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          bhaaksema
maintainer:      17254355+bhaaksema@users.noreply.github.com
category:        Logic
extra-doc-files: README.md

common shared-props
  ghc-options:      -Wall
  build-depends:
    base ^>=4.17.2,
    containers ^>=0.6.7,
    megaparsec ^>=9.3.1,
    mtl ^>=2.2.2,
    parser-combinators ^>=1.3.0,
    text ^>=2.0.2
  default-language: Haskell2010

executable super
  import:           shared-props
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    super

library
  import:           shared-props
  exposed-modules:  Formula, Parser, Prover
  other-modules:    Embed, Sequent
  hs-source-dirs:   src

test-suite super-test
  import:           shared-props
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    super,
    tasty ^>=1.4.3,
    tasty-hunit ^>=0.10.1
