cabal-version:   2.2
name:            super
version:         0.3.9
synopsis:        Prover for Superintuitionistic Logics in Haskell
homepage:        https://github.com/bhaaksema/super-prover
bug-reports:     https://github.com/bhaaksema/super-prover/issues
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          bhaaksema
maintainer:      17254355+bhaaksema@users.noreply.github.com
category:        Logic
extra-doc-files: README.md

common shared-props
  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    base ^>=4.17.2,
    text ^>=2.0.2

executable super
  import:           shared-props
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    super
  ghc-options:
    -O3
    -threaded
    -rtsopts
    -with-rtsopts=-N

library
  import:           shared-props
  exposed-modules:
    Embed,
    Formula,
    Parser,
    Prover.Classic,
    Prover.Intuition,
    Prover.Super
  other-modules:    State
  hs-source-dirs:   src
  build-depends:
    containers ^>=0.6.7,
    mtl ^>=2.2.2,
    megaparsec ^>=9.3.1,
    parser-combinators ^>=1.3.0

test-suite super-test
  import:           shared-props
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    super,
    directory ^>=1.3.7,
    tasty ^>=1.4.3,
    tasty-hunit ^>=0.10.1
