cabal-version:   2.2
name:            superintuition
version:         1.0.0
synopsis:        Prover for Superintuitionistic Logics in Haskell
homepage:        https://github.com/bhaaksema/superintuition
bug-reports:     https://github.com/bhaaksema/superintuition/issues
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          bhaaksema
maintainer:      17254355+bhaaksema@users.noreply.github.com
category:        Logic
extra-doc-files: README.md

common shared-props
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:    base ^>=4.18.1

library
  import:           shared-props
  exposed-modules:
    Data.Formula,
    Data.Collection,
    Data.Sequent,
    Parser,
    Prover.Classic,
    Prover.Intuition,
    Prover.Super
  hs-source-dirs:   src
  build-depends:
    containers ^>=0.6.7,
    mtl ^>=2.3.1,
    megaparsec ^>=9.5.0,
    parser-combinators ^>=1.3.0

executable super
  import:           shared-props
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    superintuition

test-suite super-test
  import:           shared-props
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    superintuition,
    directory ^>=1.3.7,
    tasty ^>=1.4.3,
    tasty-hunit ^>=0.10.1
