cabal-version:   2.2
name:            superintuition
version:         1.0.0
synopsis:        Prover for Superintuitionistic Logics in Haskell
homepage:        https://github.com/bhaaksema/superintuition
bug-reports:     https://github.com/bhaaksema/superintuition/issues
license:         GPL-3.0-or-later
license-file:    LICENSE
author:          bhaaksema
maintainer:      17254355+bhaaksema@users.noreply.github.com
category:        Logic
extra-doc-files: README.md

common shared-props
  default-language: Haskell2010
  ghc-options:      -Wall -O2
  build-depends:    base >= 4.12 && < 5

library
  import:           shared-props
  exposed-modules:
    Data.Formula,
    Data.Collection,
    Data.Sequent,
    Parser,
    Prover.Classic,
    Prover.Intuition,
    Prover.Super
  hs-source-dirs:   src
  build-depends:
    containers >= 0.5.11 && < 0.8,
    mtl < 2.4,
    megaparsec >= 7.0.0 && < 9.7,
    parser-combinators >= 1.0.0 && < 1.4

executable super
  import:           shared-props
  hs-source-dirs:   app
  main-is:          Main.hs
  build-depends:    superintuition

test-suite super-test
  import:           shared-props
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  build-depends:
    superintuition,
    directory >= 1.2.5.0 && < 1.4,
    tasty < 1.6,
    tasty-hunit >= 0.9 && < 0.11
